--- a/src/AboutWindow.xaml
+++ b/src/AboutWindow.xaml
@@ -1,20 +1,20 @@
-﻿<local:VideoWindow x:Class="Zhai.VideoView.AboutWindow"
+﻿<ZDY:TransparentWindow x:Class="Zhai.VideoView.AboutWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Zhai.VideoView"
+        xmlns:ZDY="http://www.zdyla.com/coding"
         xmlns:Properties="clr-namespace:Zhai.VideoView.Properties"
-        xmlns:Controls="clr-namespace:Zhai.VideoView.Controls"
-        Style="{StaticResource VideoWindow}"
+        IsTransparency="False"
+        Theme="Dark"    
         WindowStartupLocation ="CenterScreen"             
         Title="{Binding Path=AppName, Source={x:Static Properties:Settings.Default}, StringFormat=关于 {0}}"
         TitleBarVisibility="Collapsed"
         ShowInTaskbar="False"
         ResizeMode="NoResize"
-        Width="420" Height="310"
+        Width="432" Height="310"
         mc:Ignorable="d">
-    <Border Background="{StaticResource VideoWindowPaperColorBrush}">
+    <Border>
         <Grid Margin="24">
             <Grid.RowDefinitions>
                 <RowDefinition Height="0"/>
@@ -28,20 +28,19 @@
                             <Setter Property="TextWrapping" Value="Wrap"/>
                             <Setter Property="Margin" Value="0 6 0 0"/>
                         </Style>
-                        <Style TargetType="{x:Type Controls:LinkButton}" BasedOn="{StaticResource VideoView.LinkButton}">
+                        <Style TargetType="{x:Type ZDY:LinkButton}">
                             <Setter Property="Height" Value="16"/>
                             <Setter Property="Margin" Value="0 0 0 -4"/>
                         </Style>
-                        <Style TargetType="{x:Type Controls:CopyButton}" BasedOn="{StaticResource VideoView.CopyButton}">
-                            <Setter Property="Margin" Value="4 0 0 -3"/>
+                        <Style TargetType="{x:Type ZDY:CopyButton}">
+                            <Setter Property="IconSize" Value="12"/>
+                            <Setter Property="Margin" Value="0 -10"/>
                             <Setter Property="ToolTip" Value="复制"/>
                         </Style>
                     </StackPanel.Resources>
                     <StackPanel Orientation="Horizontal" Margin="0 0 0 12">
-                        <Image Source="/favicon.ico" Width="24" Height="24" Margin="0 0 4 0"/>
-                        <TextBlock Text="DY ' VIDEO" FontSize="24" Margin="0" VerticalAlignment="Center"/>
-
-
+                        <Image Source="favicon.ico" Width="24" Height="24" Margin="0 0 4 0"/>
+                        <TextBlock Text="{Binding Path=AppName2, Source={x:Static Properties:Settings.Default}}" FontSize="24" Margin="0" VerticalAlignment="Center"/>
                     </StackPanel>
 
                     <TextBlock Margin="0 0 0 7" FontSize="11" VerticalAlignment="Bottom">
@@ -60,18 +59,18 @@
 
                     <TextBlock Margin="0 14 0 0">
                         <Run>我的个人网站：</Run>
-                        <Controls:LinkButton NavigateUri="https://www.zdyla.com"/>
-                        <Controls:CopyButton CopyText="https://www.zdyla.com"/>
+                        <ZDY:LinkButton NavigateUri="https://www.zdyla.com"/>
+                        <ZDY:CopyButton Text="https://www.zdyla.com"/>
                     </TextBlock>
                     <TextBlock>
                         <Run>我的邮箱：</Run>
-                        <Controls:LinkButton Content="virus.zhh@gmail.com" NavigateUri="mailto:virus.zhh@gmail.com"/>
-                        <Controls:CopyButton CopyText="virus.zhh@gmail.com"/>
+                        <ZDY:LinkButton Content="virus.zhh@gmail.com" NavigateUri="mailto:virus.zhh@gmail.com"/>
+                        <ZDY:CopyButton Text="virus.zhh@gmail.com"/>
                     </TextBlock>
                     <TextBlock>
                         <Run>项目GitHub：</Run>
-                        <Controls:LinkButton NavigateUri="https://github.com/zdy1988/Zhai.VideoView"/>
-                        <Controls:CopyButton CopyText="https://github.com/zdy1988/Zhai.VideoView"/>
+                        <ZDY:LinkButton NavigateUri="https://github.com/zdy1988/Zhai.PictureView"/>
+                        <ZDY:CopyButton Text="https://github.com/zdy1988/Zhai.PictureView"/>
                     </TextBlock>
 
                     <TextBlock Margin="0 14 0 0">
@@ -83,4 +82,4 @@
             </Border>
         </Grid>
     </Border>
-</local:VideoWindow>
+</ZDY:TransparentWindow>
