--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -1,39 +1,41 @@
-﻿<local:VideoWindow x:Class="Zhai.VideoView.MainWindow"
+﻿<ZDY:GlassesWindow x:Class="Zhai.VideoView.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Zhai.VideoView"
-        xmlns:Properties="clr-namespace:Zhai.VideoView.Properties"           
+        xmlns:ZDY="http://www.zdyla.com/coding"
+        xmlns:Properties="clr-namespace:Zhai.VideoView.Properties"
         Title="{Binding Path=AppName, Source={x:Static Properties:Settings.Default}}"
-        Style="{StaticResource VideoWindow}"
+        Theme="Dark"
+        IsTopmostButtonEnabled="True"
+        IsTransparencyButtonEnabled="True"
         DataContext="{Binding VideoElement, Source={StaticResource Locator}}"
         WindowStartupLocation="CenterScreen"
-        FontWeight="Thin"
         Height="720" Width="960"
         MinHeight="450" MinWidth="600"
+        Icon="favicon.ico"
         mc:Ignorable="d">
-    <local:VideoWindow.TitleBar>
+    <ZDY:GlassesWindow.Resources>
+        <Style TargetType="{x:Type ZDY:IconButton}">
+            <Setter Property="Margin" Value="3"/>
+        </Style>
+        <Style TargetType="{x:Type ZDY:IconToggleButton}">
+            <Setter Property="Margin" Value="3"/>
+        </Style>
+    </ZDY:GlassesWindow.Resources>
+    <ZDY:GlassesWindow.TitleBarContent>
         <DockPanel>
             <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
-                <Button x:Name="AboutButton" Style="{StaticResource VideoView.IconButton2}" Click="AboutButton_Click" ToolTip="关于">
-                    <Path Data="{StaticResource Icon.About}"/>
-                </Button>
-                <Button x:Name="SettingsButton" Style="{StaticResource VideoView.IconButton2}" ToolTip="设置">
-                    <Path Data="{StaticResource Icon.Settings}"/>
-                </Button>
+                <ZDY:IconButton x:Name="AboutButton" Icon="About" ToolTip="关于" Click="AboutButton_Click"/>
+                <ZDY:IconButton x:Name="SettingsButton" Icon="Settings" ToolTip="设置"/>
             </StackPanel>
             <StackPanel DockPanel.Dock="Left" Orientation="Horizontal">
 
             </StackPanel>
         </DockPanel>
-    </local:VideoWindow.TitleBar>
+    </ZDY:GlassesWindow.TitleBarContent>
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="36"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Border Grid.Row="0"/>
-        <local:VideoViewElement Grid.Row="1" x:Name="VideoViewElement"/>
+        <local:VideoViewElement x:Name="VideoViewElement"/>
     </Grid>
-</local:VideoWindow>
+</ZDY:GlassesWindow>
