--- a/src/AboutWindow.xaml
+++ b/src/AboutWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ZDY:TransparentWindow x:Class="Zhai.VideoView.AboutWindow"
+﻿<ZDY:FamilWindow x:Class="Zhai.VideoView.AboutWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,7 +12,7 @@
         TitleBarVisibility="Collapsed"
         ShowInTaskbar="False"
         ResizeMode="NoResize"
-        Width="432" Height="310"
+        Width="432" Height="265"
         mc:Ignorable="d">
     <Border>
         <Grid Margin="24">
@@ -40,7 +40,7 @@
                     </StackPanel.Resources>
                     <StackPanel Orientation="Horizontal" Margin="0 0 0 12">
                         <Image Source="favicon.ico" Width="24" Height="24" Margin="0 0 4 0"/>
-                        <TextBlock Text="{Binding Path=AppName2, Source={x:Static Properties:Settings.Default}}" FontSize="24" Margin="0" VerticalAlignment="Center"/>
+                        <TextBlock x:Name="TextBlock_AppName" Text="ZDY" FontSize="24" Margin="0" VerticalAlignment="Center"/>
                     </StackPanel>
 
                     <TextBlock Margin="0 0 0 7" FontSize="11" VerticalAlignment="Bottom">
@@ -82,4 +82,4 @@
             </Border>
         </Grid>
     </Border>
-</ZDY:TransparentWindow>
+</ZDY:FamilWindow>
