--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ZDY:TransparentWindow x:Class="Zhai.VideoView.MainWindow"
+﻿<ZDY:GlassesWindow x:Class="Zhai.VideoView.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -16,7 +16,7 @@
         MinHeight="450" MinWidth="600"
         Icon="favicon.ico"
         mc:Ignorable="d">
-    <ZDY:TransparentWindow.TitleBarContent>
+    <ZDY:GlassesWindow.TitleBarContent>
         <DockPanel>
             <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
                 <ZDY:IconButton x:Name="AboutButton" Icon="About" ToolTip="关于" Click="AboutButton_Click"/>
@@ -27,8 +27,8 @@
 
             </StackPanel>
         </DockPanel>
-    </ZDY:TransparentWindow.TitleBarContent>
+    </ZDY:GlassesWindow.TitleBarContent>
     <Grid>
         <local:VideoViewElement x:Name="VideoViewElement"/>
     </Grid>
-</ZDY:TransparentWindow>
+</ZDY:GlassesWindow>
