--- a/src/VideoViewElement.xaml
+++ b/src/VideoViewElement.xaml
@@ -37,5 +37,10 @@
                 </Border>
             </Grid>
         </vlc:VideoView>
+        <Grid>
+            <Border Visibility="{Binding IsOpened, Converter={ZDY:BoolToInverseVisibilityConverter}}" VerticalAlignment="Bottom">
+                <local:VideoViewElementControllerPanel/>
+            </Border>
+        </Grid>
     </Grid>
 </UserControl>
