--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -3,9 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Zhai.VideoView"
+        xmlns:local="clr-namespace:Zhai.VideoView"             
+        xmlns:vlc="clr-namespace:LibVLCSharp.WPF;assembly=LibVLCSharp.WPF"
         xmlns:ZDY="http://www.zdyla.com/coding"
         xmlns:Properties="clr-namespace:Zhai.VideoView.Properties"
+        xmlns:XamlServices="clr-namespace:Zhai.VideoView.XamlServices"
         Title="{Binding Path=AppName, Source={x:Static Properties:Settings.Default}}"
         Theme="Dark"
         IsTopmostButtonEnabled="True"
@@ -16,6 +18,14 @@
         MinHeight="450" MinWidth="600"
         Icon="favicon.ico"
         mc:Ignorable="d">
+    <ZDY:GlassesWindow.Resources>
+        <Storyboard x:Key="ShowControlOpacity" Storyboard.TargetProperty="(UIElement.Opacity)">
+            <DoubleAnimation To="1" Duration="0:0:0.100" FillBehavior="HoldEnd" />
+        </Storyboard>
+        <Storyboard x:Key="HideControlOpacity" Storyboard.TargetProperty="(UIElement.Opacity)">
+            <DoubleAnimation To="0" Duration="0:0:0.300" FillBehavior="HoldEnd" />
+        </Storyboard>
+    </ZDY:GlassesWindow.Resources>
     <ZDY:GlassesWindow.TitleBarContent>
         <DockPanel>
             <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
@@ -29,6 +39,82 @@
         </DockPanel>
     </ZDY:GlassesWindow.TitleBarContent>
     <Grid>
-        <local:VideoViewElement x:Name="VideoViewElement"/>
+        <vlc:VideoView x:Name="VideoViewer" Background="Transparent">
+            <Grid x:Name="VideoViewerContorl" Background="#01000000" AllowDrop="True">
+                <ZDY:Loading x:Name="LoadingBox" Theme="Circle" Foreground="{x:Static SystemColors.HighlightBrush}" Width="48" Height="48" Visibility="{Binding IsLoading, Converter={ZDY:BoolToVisibilityConverter}}"/>
+
+                <Border x:Name="PlayButtonViewBox" Visibility="{Binding IsLoading, Converter={ZDY:BoolToInverseVisibilityConverter}}"
+                        Background="Transparent" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <ZDY:IconButton x:Name="PlayButton" Command="{Binding ExecutePlayCommand}" Icon="PlayThin" Foreground="White" Width="64" Height="64" IconSize="54" Margin="24"
+                                    Visibility="{Binding IsOpened,Converter={ZDY:BoolToInverseVisibilityConverter}}"/>
+                </Border>
+
+                <Border x:Name="ControllerPanelViewBox" Visibility="{Binding IsOpened, Converter={ZDY:BoolToVisibilityConverter}}" VerticalAlignment="Bottom">
+                    <local:VideoWindowControllerPanel x:Name="ControllerPanel"/>
+                </Border>
+
+                <ZDY:Drawer IsOverlayed="False" IsBottomDrawerOpen="{Binding IsShowVideoListView}" Margin="0 0 0 88">
+                    <ZDY:Drawer.BottomDrawerContent>
+                        <Border Visibility="{Binding CurrentVideo, Converter={ZDY:NullableToVisibilityConverter}}" Opacity="{Binding Source={x:Reference ControllerPanel}, Path=Opacity}">
+                            <Grid>
+                                <DockPanel HorizontalAlignment="Center" MaxWidth="888">
+                                    <ZDY:Button x:Name="GalleryButton" DockPanel.Dock="Right" Content="全部视频" Foreground="White" VerticalContentAlignment="Center" Background="Transparent"/>
+                                    <Border DockPanel.Dock="Right" Margin="3 12 0 12" Style="{StaticResource VerticalLinearGradientBorder}"/>
+                                    <ZDY:ListBox x:Name="VideoList" Margin="8 8 8 -6"
+                                                 ItemsSource="{Binding Folder}"
+                                                 VirtualizingPanel.ScrollUnit="Pixel"
+                                                 VirtualizingPanel.VirtualizationMode="Standard"
+                                                 VirtualizingPanel.IsVirtualizing="True"
+                                                 VirtualizingPanel.IsContainerVirtualizable="True"
+                                                 VirtualizingPanel.CacheLengthUnit="Item"
+                                                 ScrollViewer.CanContentScroll="True"
+                                                 ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                                                 ScrollViewer.HorizontalScrollBarVisibility="Visible"
+                                                 ZDY:ScrollViewerExtension.MouseWheelOrientation="Horizontal"
+                                                 ZDY:ScrollViewerExtension.IsPenetrating="True"
+                                                 SelectedItem="{Binding CurrentVideo}"
+                                                 SelectedIndex="{Binding CurrentVideoIndex}">
+                                        <ZDY:ListBox.ItemsPanel>
+                                            <ItemsPanelTemplate>
+                                                <VirtualizingStackPanel IsItemsHost="True" Orientation="Horizontal"/>
+                                            </ItemsPanelTemplate>
+                                        </ZDY:ListBox.ItemsPanel>
+                                        <ZDY:ListBox.ItemContainerStyle>
+                                            <Style TargetType="{x:Type ListBoxItem}">
+                                                <Setter Property="BorderThickness" Value="2"/>
+                                                <Setter Property="BorderBrush" Value="Transparent"/>
+                                                <Setter Property="Template">
+                                                    <Setter.Value>
+                                                        <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                                            <Border CornerRadius="4" BorderBrush="{TemplateBinding BorderBrush}" HorizontalAlignment="Left" 
+                                                            Width="75" Height="50" Margin="1" Padding="1"
+                                                            BorderThickness="{TemplateBinding BorderThickness}" Background="DarkGray" 
+                                                            SnapsToDevicePixels="true">
+                                                                <Image Stretch="UniformToFill" Source="{Binding ThumbSource}" ToolTip="{Binding Name}"
+                                                                       XamlServices:VideoService.Video="{Binding}"/>
+                                                            </Border>
+                                                            <ControlTemplate.Triggers>
+                                                                <Trigger Property="IsMouseOver" Value="True">
+                                                                    <Setter Property="BorderBrush" Value="{x:Static SystemColors.HighlightBrush}"/>
+                                                                </Trigger>
+                                                                <Trigger Property="IsSelected" Value="True">
+                                                                    <Setter Property="BorderBrush" Value="{x:Static SystemColors.HighlightBrush}"/>
+                                                                </Trigger>
+                                                            </ControlTemplate.Triggers>
+                                                        </ControlTemplate>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </Style>
+                                        </ZDY:ListBox.ItemContainerStyle>
+                                    </ZDY:ListBox>
+                                </DockPanel>
+                            </Grid>
+                        </Border>
+                    </ZDY:Drawer.BottomDrawerContent>
+                </ZDY:Drawer>
+
+                <ZDY:Hint Text="{Binding NotificationMessage}" FontWeight="Normal" CornerRadius="4" Margin="0 -160 0 0" Background="{x:Static SystemColors.HighlightBrush}" Duration="0:0:5"/>
+            </Grid>
+        </vlc:VideoView>
     </Grid>
 </ZDY:GlassesWindow>
