--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -7,16 +7,19 @@
         xmlns:vlc="clr-namespace:LibVLCSharp.WPF;assembly=LibVLCSharp.WPF"
         xmlns:ZDY="http://www.zdyla.com/coding"
         xmlns:Properties="clr-namespace:Zhai.VideoView.Properties"
+        xmlns:Converters="clr-namespace:Zhai.VideoView.Converters"  
         xmlns:XamlServices="clr-namespace:Zhai.VideoView.XamlServices"
-        Title="{Binding Path=AppName, Source={x:Static Properties:Settings.Default}}"
+        AppName="{Binding Path=AppName, Source={x:Static Properties:Settings.Default}}"
         Theme="Dark"
+        IsTransparency="{Binding SettingsWindow.IsWindowTransparency, Source={StaticResource Locator}, Mode=TwoWay}" 
         IsTopmostButtonEnabled="True"
         IsTransparencyButtonEnabled="True"
+        Title="{Binding CurrentVideo, Converter={Converters:VideoViewTitleConverter}}" 
         DataContext="{Binding VideoWindow, Source={StaticResource Locator}}"
         WindowStartupLocation="CenterScreen"
         Height="720" Width="960"
         MinHeight="450" MinWidth="600"
-        Icon="favicon.ico"
+        Icon="favicon2.ico"
         mc:Ignorable="d">
     <ZDY:GlassesWindow.Resources>
         <Storyboard x:Key="ShowControlOpacity" Storyboard.TargetProperty="(UIElement.Opacity)">
@@ -30,11 +33,20 @@
         <DockPanel>
             <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
                 <ZDY:IconButton x:Name="AboutButton" Icon="About" ToolTip="关于" Click="AboutButton_Click"/>
-                <ZDY:IconButton x:Name="SettingsButton" Icon="Settings" ToolTip="设置"/>
-                <ZDY:IconToggleButton Icon="Adapt"/>
+                <ZDY:IconButton x:Name="SettingsButton" Icon="Settings" ToolTip="设置" Click="SettingsButton_Click"/>
+                <!--<ZDY:IconToggleButton Icon="Adapt"/>-->
             </StackPanel>
-            <StackPanel DockPanel.Dock="Left" Orientation="Horizontal">
-
+            <StackPanel DockPanel.Dock="Left" Orientation="Horizontal" 
+                        VerticalAlignment="Center" Visibility="{Binding CurrentVideo, Converter={ZDY:NullableToVisibilityConverter}}">
+                <TextBlock Text=" : "/>
+                <TextBlock Text="{Binding CurrentVideo.Name}"/>
+                <TextBlock Text=" ( "/>
+                <TextBlock Text="{Binding CurrentVideo.Size, Converter={ZDY:ByteLengthToStringConverter}}"/>
+                <TextBlock Text=" )"/>
+                <TextBlock Text=" - "/>
+                <TextBlock Text="{Binding CurrentVideoIndex,Converter={ZDY:MathConverter}, ConverterParameter=x+1}"/>
+                <TextBlock Text="/"/>
+                <TextBlock Text="{Binding Folder.Count}"/>
             </StackPanel>
         </DockPanel>
     </ZDY:GlassesWindow.TitleBarContent>
@@ -45,7 +57,7 @@
 
                 <Border x:Name="PlayButtonViewBox" Visibility="{Binding IsLoading, Converter={ZDY:BoolToInverseVisibilityConverter}}"
                         Background="Transparent" VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <ZDY:IconButton x:Name="PlayButton" Command="{Binding ExecutePlayCommand}" Icon="PlayThin" Foreground="White" Width="64" Height="64" IconSize="54" Margin="24"
+                    <ZDY:IconButton x:Name="PlayButton" Command="{Binding ExecutePlayCommand}" Icon="PlayThin" Foreground="White" Width="64" Height="64" IconSize="58" Margin="24"
                                     Visibility="{Binding IsOpened,Converter={ZDY:BoolToInverseVisibilityConverter}}"/>
                 </Border>
 
