--- a/src/AboutWindow.xaml
+++ b/src/AboutWindow.xaml
@@ -4,10 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ZDY="http://www.zdyla.com/coding"
-        xmlns:Properties="clr-namespace:Zhai.VideoView.Properties"
-        Theme="Dark"    
-        WindowStartupLocation ="CenterScreen"             
+        xmlns:Properties="clr-namespace:Zhai.VideoView.Properties" 
+        xmlns:Converters="clr-namespace:Zhai.VideoView.Converters" 
         Title="{Binding Path=AppName, Source={x:Static Properties:Settings.Default}, StringFormat=关于 {0}}"
+        Theme="{Binding SettingsWindow.IsWindowDarked, Source={StaticResource Locator}, Converter={Converters:VideoViewThemeConverter}}"   
+        WindowStartupLocation ="CenterScreen"  
         TitleBarVisibility="Collapsed"
         ShowInTaskbar="False"
         ResizeMode="NoResize"
