--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ZDY:GlassesWindow x:Class="Zhai.VideoView.MainWindow"
+﻿<ZDY:FamilWindow x:Class="Zhai.VideoView.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,10 +10,10 @@
         xmlns:Converters="clr-namespace:Zhai.VideoView.Converters"  
         xmlns:XamlServices="clr-namespace:Zhai.VideoView.XamlServices"
         AppName="{Binding Path=AppName, Source={x:Static Properties:Settings.Default}}"
-        Theme="Dark"
-        IsTransparency="{Binding SettingsWindow.IsWindowTransparency, Source={StaticResource Locator}, Mode=TwoWay}" 
+        Theme="{Binding SettingsWindow.IsWindowDarked, Source={StaticResource Locator}, Converter={Converters:VideoViewThemeConverter}, Mode=TwoWay}" 
         IsTopmostButtonEnabled="True"
-        IsTransparencyButtonEnabled="True"
+        IsThemeButtonEnabled="False"
+        IsTransparencyButtonEnabled="False"
         Title="{Binding CurrentVideo, Converter={Converters:VideoViewTitleConverter}}" 
         DataContext="{Binding VideoWindow, Source={StaticResource Locator}}"
         WindowStartupLocation="CenterScreen"
@@ -51,7 +51,7 @@
         </DockPanel>
     </ZDY:GlassesWindow.TitleBarContent>
     <Grid>
-        <vlc:VideoView x:Name="VideoViewer" Background="Transparent">
+        <vlc:VideoView x:Name="VideoViewer" Background="Transparent" BorderThickness="0">
             <Grid x:Name="VideoViewerContorl" Background="#01000000" AllowDrop="True">
                 <ZDY:Loading x:Name="LoadingBox" Theme="Circle" Foreground="{x:Static SystemColors.HighlightBrush}" Width="48" Height="48" Visibility="{Binding IsLoading, Converter={ZDY:BoolToVisibilityConverter}}"/>
 
@@ -129,4 +129,4 @@
             </Grid>
         </vlc:VideoView>
     </Grid>
-</ZDY:GlassesWindow>
+</ZDY:FamilWindow>
