--- a/src/SettingsWindow.xaml
+++ b/src/SettingsWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ZDY="http://www.zdyla.com/coding" 
         xmlns:Properties="clr-namespace:Zhai.VideoView.Properties"
-        Theme="Dark"
+        xmlns:Converters="clr-namespace:Zhai.VideoView.Converters"
+        Theme="{Binding SettingsWindow.IsWindowDarked, Source={StaticResource Locator}, Converter={Converters:VideoViewThemeConverter}}"
         DataContext="{Binding SettingsWindow, Source={StaticResource Locator}}"
         WindowStartupLocation ="CenterScreen" 
         ShowInTaskbar="False"
@@ -22,10 +23,6 @@
                         <StackPanel Orientation="Horizontal" Margin="0 0 0 8">
                             <ZDY:CheckBox IsChecked="{Binding IsStartWindowMaximized}"/>
                             <TextBlock Margin="8 0" Text="启动时全屏显示"/>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" Margin="0 0 0 8">
-                            <ZDY:CheckBox IsChecked="{Binding IsWindowTransparency}"/>
-                            <TextBlock Margin="8 0" Text="是否使用透明窗体"/>
                         </StackPanel>
                     </StackPanel>
                 </ZDY:TabItem>
