--- a/src/VideoWindowControllerPanel.xaml
+++ b/src/VideoWindowControllerPanel.xaml
@@ -81,12 +81,13 @@
                 </DockPanel>
 
                 <DockPanel Name="CenterControls" HorizontalAlignment="Center" Grid.Column="1">
-                    <ZDY:IconButton x:Name="OpenButton" Icon="Open" ToolTip="打开" Command="{Binding ExecuteOpenCommand}"/>
-                    <ZDY:IconToggleButton x:Name="LoopingButton" CheckedIcon="Refresh" CheckedToolTip="关闭循环" Icon="Refresh" ToolTip="循环播放" IsChecked="{Binding IsLooping, Mode=TwoWay}"/>
-                    <ZDY:IconButton x:Name="PrevButton" Icon="Previous" ToolTip="上一个" Command="{Binding ExecutePrevCommand}"/>
+                    <ZDY:IconButton x:Name="OpenButton" Icon="Open" ToolTip="打开" Command="{Binding ExecuteOpenCommand}" Visibility="{Binding CurrentVideo, Converter={ZDY:NullableToVisibilityConverter}}"/>
+                    <ZDY:IconToggleButton x:Name="LoopingButton" CheckedIcon="Convertshape" CheckedToolTip="关闭循环" Icon="Convertshape" ToolTip="循环播放" IsChecked="{Binding IsLooping, Mode=TwoWay}" 
+                                          IsEnabled="{Binding CurrentVideo, Converter={ZDY:NullableToBoolConverter}}"/>
+                    <ZDY:IconButton x:Name="PrevButton" Icon="Previous" ToolTip="上一个" Command="{Binding ExecutePrevCommand}" Visibility="{Binding IsVideoCountMoreThanOne, Converter={ZDY:BoolToVisibilityConverter}}"/>
                     <ZDY:IconButton x:Name="PlayButton" Icon="Play2" ToolTip="播放" Command="{Binding ExecutePlayCommand}" Visibility="{Binding IsPaused, Converter={ZDY:BoolToVisibilityConverter}}"/>
                     <ZDY:IconButton x:Name="PauseButton" Icon="Pause" ToolTip="暂停" Command="{Binding ExecutePauseCommand}" Visibility="{Binding IsPaused, Converter={ZDY:BoolToInverseVisibilityConverter}}"/>
-                    <ZDY:IconButton x:Name="NextButton" Icon="Next" ToolTip="下一个" Command="{Binding ExecuteNextCommand}"/>
+                    <ZDY:IconButton x:Name="NextButton" Icon="Next" ToolTip="下一个" Command="{Binding ExecuteNextCommand}" Visibility="{Binding IsVideoCountMoreThanOne, Converter={ZDY:BoolToVisibilityConverter}}"/>
                     <Grid>
                         <ZDY:Badged HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 -24 -24 0" BadgeBackground="{StaticResource Zhai.Famil.ColorfulBrush}">
                             <ZDY:Badged.Badge>
@@ -105,7 +106,7 @@
                                 </Style>
                             </ZDY:Badged.Style>
                         </ZDY:Badged>
-                        <ZDY:IconButton x:Name="RateButton" Icon="PlayCricle" ToolTip="倍速"/>
+                        <ZDY:IconButton x:Name="RateButton" Icon="TimerStart1" ToolTip="倍速" IsEnabled="{Binding CurrentVideo, Converter={ZDY:NullableToBoolConverter}}"/>
                         <ZDY:Popup Placement="Top" PlacementTarget="{Binding ElementName=RateButton}" AllowsTransparency="True" PopupAnimation="Fade">
                             <ZDY:ListBox Width="80" ItemsSource="{Binding Rates}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding Rate}"/>
                         </ZDY:Popup>
